[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games: a collection of 5 math mini-games"
authors = ["Denis Korepov <dk777-07@mail.ru>"]
repository = "https://github.com/DenK85/python-project-lvl1.git"
readme = "README.md"
packages = [{include = "brain_games"}]
classifiers = [
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main" 
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
